--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.13.0",
     "react-animations": "^1.0.0",
     "react-dom": "^16.13.0",
+    "react-intersection-observer-hook": "^1.0.4",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
