--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-loader-spinner": "^3.1.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.11",
@@ -27,10 +28,12 @@
     "react-animations": "^1.0.0",
     "react-dom": "^16.13.0",
     "react-intersection-observer-hook": "^1.0.4",
+    "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-select": "^3.1.0",
+    "react-spinners": "^0.8.1",
     "react-thunk": "^1.0.0",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
